@@ -1,0 +1,1 @@
+/* The code is the same as lround.  Use an alias, see l_round.c.  */
